--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,5 @@
 {
   "home": {
-    "title": "PRODON - ИНТЕЛЕКТУАЛНАЯ СИСТЕМА"
+    "title": "SIDON — интеллектуальная система прогнозирования"
   }
 }
